menu scroll fix on iOS safari

--- a/css/tennis-app.css
+++ b/css/tennis-app.css
@@ -1,5 +1,6 @@
 html {
   touch-action: manipulation;
+  overflow: hidden;
 }
 
 html, body {
@@ -7,6 +8,8 @@ html, body {
 }
 
 body {
+  position: relative;
+  overflow: auto;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
@@ -43,6 +46,11 @@ body {
   min-height: 100%;
   padding: 50px 0 0 0;
   background: #fff;
+}
+
+/* Fix nav scrolling: https://github.com/jasny/bootstrap/issues/467 */
+body.canvas-slid {
+    position: fixed !important;
 }
 
 @media (min-width: 0) {
